; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_render.c_render_layer.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_render.c_render_layer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_output = type { i32 }
%struct.wl_list = type { i32 }
%struct.render_data = type { float, i32* }

@render_surface_iterator = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sway_output*, i32*, %struct.wl_list*)* @render_layer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_layer(%struct.sway_output* %0, i32* %1, %struct.wl_list* %2) #0 {
  %4 = alloca %struct.sway_output*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.wl_list*, align 8
  %7 = alloca %struct.render_data, align 8
  store %struct.sway_output* %0, %struct.sway_output** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.wl_list* %2, %struct.wl_list** %6, align 8
  %8 = getelementptr inbounds %struct.render_data, %struct.render_data* %7, i32 0, i32 0
  store float 1.000000e+00, float* %8, align 8
  %9 = getelementptr inbounds %struct.render_data, %struct.render_data* %7, i32 0, i32 1
  %10 = load i32*, i32** %5, align 8
  store i32* %10, i32** %9, align 8
  %11 = load %struct.sway_output*, %struct.sway_output** %4, align 8
  %12 = load %struct.wl_list*, %struct.wl_list** %6, align 8
  %13 = load i32, i32* @render_surface_iterator, align 4
  %14 = call i32 @output_layer_for_each_surface(%struct.sway_output* %11, %struct.wl_list* %12, i32 %13, %struct.render_data* %7)
  ret void
}

declare dso_local i32 @output_layer_for_each_surface(%struct.sway_output*, %struct.wl_list*, i32, %struct.render_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
